# machma10-telegram-bot

./: .gitignore  LICENSE  bot.py  db.py  init.sql  pyproject.toml
machma/: bot.py  db.py
