[tool.poetry]
name = "machma10-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Lukas Stevens <mail@lukas-stevens.de>"]

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
